feat: add new img

--- a/index.html
+++ b/index.html
@@ -4,31 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="style.css">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Forum&family=Inter:wght@400;700&family=Roboto:ital,wght@0,400;1,100&display=swap" rel="stylesheet">
-    <title></title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@500&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="style.css">
+   <title></title>
 </head>
 <body>
   <h1>Как я провожу время с семьей</h1>
   <h2>Мы много гуляем на улице с родителями</h2>
-  <img src="6.jpg" alt="">
+  <img src="6.jpg" alt="walking">
   <h2>В песочнице я леплю мороженое для мамы</h2>
-  <img src="5.jpg" alt="">
+  <img src="5.jpg" alt="sandbox">
   <h2>Люблю после садика покататься на качелях</h2>
-  <img src="8.jpg" alt="">
+  <img src="8.jpg" alt="swing">
   <h2>Я обожаю проводить  время на даче у бабушки</h2>
-  <img src="11.jpg" alt="">
-  <img src="7.jpg" alt="">
-  <h2>А ещё мы с папой и мамой весной и летом часто ходим в парк, покататься на каруселях</h2>
+  <img src="11.jpg" alt="country_house">
+  <img src="7.jpg" alt="greenhouse">
+  <h2>Летом мы часто ходим в парк</h2>
   <div class="retreat">
-  <img src="1.jpg" alt="">
-  <img src="3.jpg" alt="">
+  <img src="1.jpg" alt="attraction">
+  <img src="3.jpg" alt="on_horse">
 </div>
-  <h2>Когда на улице дождливая погода в выходной день, мама с папой водят меня в детскую комнату. Я обожаю там плавать в шариках и прыгать на батуте</h2>
-  <img class="retreat" src="9.jpg" alt="">
+  <h2>Осенью мы ходим в детскую комнату</h2>
+  <img class="retreat" src="9.jpg" alt="balloons">
   <h2>Дома мы с мамой часто рисуем</h2>
-  <img src="2.jpg" alt="">
-  <img src="10.jpg" alt="">
+  <img src="2.jpg" alt="art">
+  <img src="10.jpg" alt="drawing">
+  <h2>Играем в развивающие игры</h2>
+  <img src="12.jpg" alt="tweezers">
+  <img src="13.jpg" alt="pyramid">
+
   </body>
 </html>
